--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -12,7 +12,7 @@
 
 <div class="row second-bar">
   <div class="large-10 container">
-    <div class="small-8 columns"><h1>Busca, compra y vende autos mas fácil</h1></div>
+    <div class="small-8 columns"><h1><%= title %></h1></div>
     <div class="large-2 columns location"></div>
     <%= link_to "Anúnciate", contacto_path, class: "button right", id: "new-advertise" %>
   </div>
