--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,9 +1,26 @@
+<%
+set_meta_tags :title => 'Busca miles de autos seminuevos',
+              :description => 'Buscar autos seminuevos en México',
+              :keywords => 'autos seminuevos, autos usados, seminuevos mexico, seminuevos'
+%>
 <div class="container busqueda">
   <div class="row large-10">
     <div class="large-3 columns">
       <%= render partial: "partials/form", locals: {marcas: @marcas_form, states: @states_form, modelos: @models_form} %>
       <div id="ad-form">
-       <img src="http://www.centreautocollision.com/images/right_car.jpg" />
+        <% if Rails.env == "production" %>
+          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- Search - below form -->
+          <ins class="adsbygoogle"
+               style="display:inline-block;width:300px;height:600px"
+               data-ad-client="ca-pub-3810811841708456"
+               data-ad-slot="7208952995"></ins>
+          <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        <% else %>
+          <img src="http://placehold.it/300x690/A7DBD8/&text=Ads">
+        <% end %>
       </div>
       
     </div>
@@ -33,7 +50,7 @@
             </div>
           <% end %>
           <div class="large-11 right columns">
-            <button data-make="<%= @marca %>" data-min="<%= @price1 %>" data-max="<%= @price2 %>" data-state="<%= @state %>" id="more" class="btn btn-block right" value="1" type="button">More</button>
+            <button data-make="<%= @marca %>" data-model="<%= @modelo %>" data-min="<%= @price1 %>" data-max="<%= @price2 %>" data-state="<%= @state %>" id="more" class="btn btn-block right" value="1" type="button">More</button>
           </div>
         <% else %>
             <div class="panel large-11 right">
