Se agregaron foundicons; Se agrego Devise; Se agregaron autentificaciones;

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require_self
  *= require foundation
  *= require foundation_and_overrides
+ *= require ./foundation/social_foundicons
  *= require_tree ./partials
  */
 
