--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -64,6 +64,10 @@
   padding: 20px;
 }
 
+.third-row section{
+  background-color: #313131;
+}
+
 .third-row div{
   margin: auto;
   color: #999999;
