--- a/app/views/partials/_results.html.erb
+++ b/app/views/partials/_results.html.erb
@@ -4,7 +4,7 @@
 		<div class="media large-11 right columns">
       
       <div class="large-3 columns">
-  		  <a class="pull-left" href="<%= data.url %>" ><img align="left" class="img-polaroid" src="<%= raw data.image %>" width="120" /></a>
+  		  <a class="pull-left" href="<%= data.url %>" target="_blank" ><img align="left" class="img-polaroid" src="<%= raw data.image %>" width="120" /></a>
       </div>
       <div class="media-body large-9 columns">
         <h3 class="media-heading"><a target="_blank" href="<%= data.url %>"><%= data.title %></a></h3>
