--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en">  <%= stylesheet_link_tag 'foundation/social_foundicons_ie7' %> <![endif]-->
 <!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
 <!--[if IE 9 ]>    <html class="ie9" lang="en"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
@@ -15,7 +15,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   	<!--<title><%# content_for?(:title) ? yield(:title) : "Autopy.com" %></title>-->
-    <%= display_meta_tags :site => 'Autopy' %>
+    <%= display_meta_tags :site => 'autobuscalo' %>
 
     <%= stylesheet_link_tag    "application" %>
   	<%= stylesheet_link_tag    controller_name %>
