Se modifico scraping_job UTF8; Se modificaron los urls de foundicons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   	<!--<title><%# content_for?(:title) ? yield(:title) : "Autopy.com" %></title>-->
-    <%= display_meta_tags :site => 'autobuscalo' %>
+    <%= display_meta_tags :site => 'autobúscalo' %>
 
     <%= stylesheet_link_tag    "application" %>
   	<%= stylesheet_link_tag    controller_name %>
