Se agrego SEO al search en title

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,6 +1,6 @@
 <%
-  set_meta_tags :title => 'Busca, compra y vende autos mas fácil',
-                :description => 'Buscar, compra y vende autos de manera mas fácil',
+  set_meta_tags :title => 'Busca, compra y vende seminuevos mas fácil',
+                :description => 'Busca, compra y vende seminuevos de manera mas fácil',
                 :keywords => 'autos seminuevos, autos usados, seminuevos mexico, seminuevos, autos'
 %>
 <!-- Map -->
