--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,7 @@
 <%
-set_meta_tags :title => 'Busca miles de autos seminuevos',
-              :description => 'Buscar autos seminuevos en México',
-              :keywords => 'autos seminuevos, autos usados, seminuevos mexico, seminuevos'
+  set_meta_tags :title => "Seminuevos #{@title.join(" ")}",
+                :description => 'Busca, compra y vende seminuevos de manera mas fácil',
+                :keywords => 'autos seminuevos, autos usados, seminuevos mexico, seminuevos, autos'
 %>
 <div class="container busqueda">
   <div class="row large-10">
