--- a/app/views/partials/_results.html.erb
+++ b/app/views/partials/_results.html.erb
@@ -15,7 +15,7 @@
         <div><%=  data.color %></div>
         <div><%=  data.km %></div>
         <div class="offset3">
-          <a class="btn btn-mini" href="https://twitter.com/share?url=<%= data.url %>" target="_blank" ><i class="icon-twitter"></i> Tweet</a>
+          <a class="btn btn-mini" href="https://twitter.com/share?text=Estena seminuevo! &url=<%= data.url %>" target="_blank" ><i class="icon-twitter"></i> Tweet</a>
           <a class="btn btn-mini" href="http://www.facebook.com/share.php?u=<%= data.url %>" target="_blank"><i class="icon-facebook"></i> Share</a>     
         </div>
       </div>
