--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -43,7 +43,7 @@
                 <div><%=  data.color %></div>
                 <div><%=  data.km %></div>
                 <div class="offset3">
-                  <a class="btn btn-mini" href="https://twitter.com/share?url=<%= data.url %>" target="_blank" ><i class="social foundicon-twitter" alt="Tweet"></i></a>
+                  <a class="btn btn-mini" href="https://twitter.com/share?text=Estena seminuevo! &url=<%= data.url %>" target="_blank" ><i class="social foundicon-twitter" alt="Tweet"></i></a>
                   <a class="btn btn-mini" href="http://www.facebook.com/share.php?u=<%= data.url %>" target="_blank"><i class="social foundicon-facebook" alt="Share"></i></a>     
                 </div>
               </div>
